Added new laravel project

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,7 +2,7 @@ server {
     listen       80;
     server_name  localhost;
     #root /appdata/www/public;
-    root /appdata/www/project_data/public;
+    root /appdata/www/public;
 
     location / {
         try_files $uri @rewriteapp;
