--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,17 @@
 .vscode
 
 ### Laravel template
-/vendor/
-node_modules/
+/node_modules
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
+.env
+.env.backup
+.phpunit.result.cache
+docker-compose.override.yml
+Homestead.json
+Homestead.yaml
 npm-debug.log
 yarn-error.log
 
