Create new disk (real_public) for storage in public folder

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,7 +65,7 @@ services:
     environment:
       # arbitrary server option - allowing you to specify any MySQL/MariaDB server on the login page
       #- PMA_ARBITRARY=1
-      - PMA_HOST=symfony-api-platform-db
+      - PMA_HOST=laravel-db
       - PMA_USER=root
       - PMA_PASSWORD=root
     depends_on:
