--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+# change css directory to public/public-resources/css
+ASSET_URL="/public-resources"
 
 # daily -->separate files for each day
 LOG_CHANNEL=daily
